--- a/assets/Boot.css
+++ b/assets/Boot.css
@@ -1,25 +1,35 @@
-header{ 
+
+.class{
     grid-area: header;
     width: 100%;
     height: 80px;
-    background-color: #c9ffe5;
-    border-bottom: #777777 2px solid;
-}
-
-nav{
     position: absolute;
     padding: 5px;
     margin: 0%;
     right: calc(50% - 480px);
     top: 25px;
+    color: #900C3F;
+    background-color: #c9ffe5;
+    border-bottom: #777777 2px solid;
 }
 
-li{
-    display: inline;
-} 
+#navbarNavAltMarkup{
+    position: relative;
+    max-width: 100%;
+    color: #900C3F;
+    background-color: #c9ffe5;
+}
+
+.navbar-brand{
+    position: relative;
+    max-width: 100%;
+    color: #900C3F;
+    background-color: #c9ffe5;
+}
+
 
 a{ 
-    color: #777777;
+    color: #900C3F;
     text-decoration: none;
     padding: 5px;
 }
@@ -76,7 +86,7 @@ main{
 
 /* Portfolio */
 
-.Images{
+.img-fluid{
     width: 200px;
     height: 150px;
     
@@ -106,6 +116,7 @@ div{
 label{
     line-height: 1.5;
 }
+
 /* Footer */
 footer{
     grid-area: footer;  
