--- a/assets/Boot.css
+++ b/assets/Boot.css
@@ -69,7 +69,7 @@ h3{
 main{
     grid-area: main;
     position: relative;
-    width: 960px;
+    width: 50%;
     margin: auto;
     padding: 10px;
     background-color: white;
@@ -137,4 +137,12 @@ body{
     grid-template-rows: auto 1fr auto 2fr auto;
     grid-template-areas: "header" "." "main" "." "footer";
     background-image: url("../images/fresh_snow.png");
+}
+
+@media (max-width: 768px) {
+    main {
+        width: 90%;
+        border: 2px solid #dddddd;
+    }
+
 }
