--- a/assets/Boot.css
+++ b/assets/Boot.css
@@ -27,6 +27,10 @@
     background-color: #c9ffe5;
 }
 
+nav {
+    background-color: #c9ffe5;
+}
+
 
 a{ 
     color: #900C3F;
@@ -70,10 +74,14 @@ main{
     grid-area: main;
     position: relative;
     width: 50%;
-    margin: auto;
+    margin: 50px 0;
     padding: 10px;
     background-color: white;
     border: #dddddd 5px solid;
+}
+
+.paragraph {
+    width: 100%;
 }
 
 #culture{
@@ -140,9 +148,10 @@ body{
 }
 
 @media (max-width: 768px) {
-    main {
+    #culture {
         width: 90%;
         border: 2px solid #dddddd;
+        height: auto;
     }
 
 }
